data/objects/Commission_Split__c.object
<CustomObject>
    <fields>
        <fullName>Based_on_TCV_or_NCV__c</fullName>
        <label>Based on TCV or NCV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TCV</fullName>
                </value>
                <value>
                    <fullName>NCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commision_Percent_Payments__c</fullName>
        <label>Commision Percent Payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Percent_2__c</fullName>
        <label>Commission Percent 2</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Percent_Payments_2__c</fullName>
        <label>Commission Percent Payments 2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Percent__c</fullName>
        <label>Commission Percent</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Recipient_Name__c</fullName>
        <description>Used in automations to pull in a person&apos;s name.</description>
        <formula>Commission_Recipient__r.FirstName + &quot; &quot; +  Commission_Recipient__r.LastName</formula>
        <inlineHelpText>Used in automations to pull in a person&apos;s name.</inlineHelpText>
        <label>Commission Recipient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Recipient__c</fullName>
        <label>Commission Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <label>Commission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Traditional Monthly</fullName>
                </value>
                <value>
                    <fullName>Traditional with Pop</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>EC Finder1</fullName>
                </value>
                <value>
                    <fullName>EC Finder2</fullName>
                </value>
                <value>
                    <fullName>EC Other</fullName>
                </value>
                <value>
                    <fullName>EC1</fullName>
                </value>
                <value>
                    <fullName>EC2</fullName>
                </value>
                <value>
                    <fullName>Regional President</fullName>
                </value>
                <value>
                    <fullName>Salesperson</fullName>
                </value>
                <value>
                    <fullName>Salesperson Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissions_Approved__c</fullName>
        <label>Commissions Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissions_Assigned__c</fullName>
        <label>Commissions Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract_CEN__c</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Sign_Date__c</fullName>
        <label>Customer Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D365_Commissions_Split_ID__c</fullName>
        <externalId>true</externalId>
        <label>D365 Commissions Split ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Max 2000 characters.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Energy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>First_Payment_Amount__c</fullName>
        <label>First Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date__c</fullName>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Payment Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Sequence_Number__c</fullName>
        <label>Import Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modified_On__c</fullName>
        <label>Modified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NCV__c</fullName>
        <label>NCV</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Eligible_Years__c</fullName>
        <label>Number of Eligible Years</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over_Quota_Commission__c</fullName>
        <label>Over Quota Commission %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Over_Quota_Commission_amt__c</fullName>
        <label>Over Quota Commission</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Quota_Scheduled_Date__c</fullName>
        <label>Over Quota Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POP_Payment_Date__c</fullName>
        <label>POP Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POP_Payment__c</fullName>
        <label>POP Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recoverable__c</fullName>
        <label>Recoverable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep #1</fullName>
                </value>
                <value>
                    <fullName>Sales Rep #2</fullName>
                </value>
                <value>
                    <fullName>MC #1</fullName>
                </value>
                <value>
                    <fullName>MC #2</fullName>
                </value>
                <value>
                    <fullName>MC#1 Recruiter</fullName>
                </value>
                <value>
                    <fullName>MC#2 Recruiter</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commission_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Commission Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Commission_for_Contract_Term__c</fullName>
        <label>Total Commission for Contract Term</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conservation</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commission Split</label>
    <listViews>
        <fullName>Accounting</fullName>
        <columns>NAME</columns>
        <columns>Commission_Recipient__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Number_of_Payments__c</columns>
        <columns>Based_on_TCV_or_NCV__c</columns>
        <columns>Percentage__c</columns>
        <columns>Total_Commission_for_Contract_Term__c</columns>
        <columns>First_Payment_Amount__c</columns>
        <columns>First_Payment_Due_Date__c</columns>
        <columns>TCV__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Payment_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2023</value>
        </filters>
        <label>Accounting</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Notes__c</columns>
        <columns>Commission_Recipient__c</columns>
        <columns>Commissions_Approved__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Commission_Splits_by_Recipient</fullName>
        <columns>Opportunity__c</columns>
        <columns>Contract__c</columns>
        <columns>Commission_Type__c</columns>
        <columns>Commission_Recipient__c</columns>
        <columns>First_Payment_Due_Date__c</columns>
        <columns>First_Payment_Amount__c</columns>
        <columns>Total_Commission_for_Contract_Term__c</columns>
        <columns>Role__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commission_Recipient__c</field>
            <operation>equals</operation>
            <value>William paiva</value>
        </filters>
        <label>Commission Splits by Recipient</label>
    </listViews>
    <listViews>
        <fullName>Commissions_2025</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Commission_Recipient__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Number_of_Payments__c</columns>
        <columns>Based_on_TCV_or_NCV__c</columns>
        <columns>Percentage__c</columns>
        <columns>Total_Commission_for_Contract_Term__c</columns>
        <columns>First_Payment_Amount__c</columns>
        <columns>First_Payment_Due_Date__c</columns>
        <columns>TCV__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Payment_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2024</value>
        </filters>
        <filters>
            <field>First_Payment_Due_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2026</value>
        </filters>
        <label>Commissions-2025</label>
    </listViews>
    <listViews>
        <fullName>Commissions_All</fullName>
        <columns>NAME</columns>
        <columns>Commission_Recipient__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Number_of_Payments__c</columns>
        <columns>Based_on_TCV_or_NCV__c</columns>
        <columns>Percentage__c</columns>
        <columns>Total_Commission_for_Contract_Term__c</columns>
        <columns>First_Payment_Amount__c</columns>
        <columns>First_Payment_Due_Date__c</columns>
        <columns>TCV__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Payment_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2020</value>
        </filters>
        <label>Commissions-2021 to present</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Accounting</fullName>
        <columns>Commission_Recipient__c</columns>
        <columns>Opportunity__c</columns>
        <columns>TCV__c</columns>
        <columns>Based_on_TCV_or_NCV__c</columns>
        <columns>Percentage__c</columns>
        <columns>Total_Commission_for_Contract_Term__c</columns>
        <columns>Number_of_Payments__c</columns>
        <columns>First_Payment_Amount__c</columns>
        <columns>First_Payment_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Payment_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2025</value>
        </filters>
        <label>Commissions-2026</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Commission Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>